--- a/app/src/main/res/layout/list_item_artist.xml
+++ b/app/src/main/res/layout/list_item_artist.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:minHeight="?android:listPreferredItemHeight"
-    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    >
 
-    android:id="@+id/list_item_artist_textview"
-/>
+    <TextView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="10dp"
+        android:layout_height="match_parent"
+        android:minHeight="?android:listPreferredItemHeight"
+        android:gravity="center_vertical"
+        android:id="@+id/list_item_artist_counter"
+        />
+
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:minHeight="?android:listPreferredItemHeight"
+        android:gravity="center_vertical"
+
+        android:id="@+id/list_item_artist_textview"
+        />
+
+</LinearLayout>
+
