--- a/app/src/main/res/layout/list_item_artist.xml
+++ b/app/src/main/res/layout/list_item_artist.xml
@@ -7,13 +7,14 @@
     android:orientation="horizontal"
     >
 
-    <TextView
+    <ImageView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="10dp"
-        android:layout_height="match_parent"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:minHeight="?android:listPreferredItemHeight"
         android:gravity="center_vertical"
-        android:id="@+id/list_item_artist_counter"
+        android:id="@+id/list_item_artist_image"
+        android:paddingRight="5dp"
         />
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
