--- a/app/src/main/res/layout/activity_artist_view.xml
+++ b/app/src/main/res/layout/activity_artist_view.xml
@@ -1,5 +1,6 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
     android:name="com.mfkuntz.spotifly.ArtistViewFragment"
-    tools:layout="@layout/fragment_artist_view" android:layout_width="match_parent"
+    tools:layout="@layout/fragment_artist_view"
+    android:layout_width="match_parent"
     android:layout_height="match_parent" />
