--- a/app/src/main/res/layout/fragment_artist_view.xml
+++ b/app/src/main/res/layout/fragment_artist_view.xml
@@ -6,7 +6,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.mfkuntz.spotifly.ArtistViewFragment">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/artist_view_id"/>
 
 </RelativeLayout>
