--- a/app/src/main/res/layout/list_item_artist.xml
+++ b/app/src/main/res/layout/list_item_artist.xml
@@ -9,12 +9,13 @@
 
     <ImageView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:minHeight="?android:listPreferredItemHeight"
         android:gravity="center_vertical"
         android:id="@+id/list_item_artist_image"
-        android:paddingRight="5dp"
+        android:paddingRight="7.5dp"
+        android:paddingBottom="7.5dp"
         />
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
